--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div id="{{PKG_NAME}}"></div>
 
-  <script src="/assets/modernizr.js" type="text/javascript"></script>
+  <!--<script src="/assets/modernizr.js" type="text/javascript"></script>-->
   <script src="/assets/vendor.dev.js" type="text/javascript"></script>
   <script src="/assets/{{PKG_NAME}}.dev.js" type="text/javascript"></script>
 </body>
